--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ LazyData: true
 Imports:
     jsonlite,
     curl,
-    magrittr
+    magrittr,
+    dplyr
 RoxygenNote: 7.0.2
 Suggests: 
     testthat
