add rlang dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,4 @@ export(statswales_get_dataset)
 export(statswales_get_metadata)
 export(statswales_search)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
