--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: statswalesr
 Type: Package
-Title: Provides Functions for Easily Extracting Data from StatsWales
+Title: Easily Extract Data from 'StatsWales'
 Version: 0.1.0
 Authors@R: person(
     "Jamie", "Ralph", email = "jamesryanralph@outlook.com",
     role = c("aut", "cre")
     )
-Description: A collection of useful functions for downloading data
-    from StatsWales into R. The functions remove the need for the user to
-    write their own loops when parsing data from StatsWales OData feeds. 
+Description: Download data from StatsWales into R. Removes the need for the user to
+    write their own loops when parsing data from the 'StatsWales' API. Provides functions
+    for datasets (<http://open.statswales.gov.wales/en-gb/dataset/>) and metadata
+    (<http://open.statswales.gov.wales/en-gb/discover/metadata>) endpoints. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
