--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: person(
     "Jamie", "Ralph", email = "jamesryanralph@outlook.com",
     role = c("aut", "cre")
     )
-Description: Download data from StatsWales into R. Removes the need for the user to
+Description: Download data from 'StatsWales' into R. Removes the need for the user to
     write their own loops when parsing data from the 'StatsWales' API. Provides functions
     for datasets (<http://open.statswales.gov.wales/en-gb/dataset/>) and metadata
     (<http://open.statswales.gov.wales/en-gb/discover/metadata>) endpoints. 
